Fixed names from Capa Fixed Orientador Name Fixed Resumo

--- a/doc/abnt/folha_de_aprovacao.tex
+++ b/doc/abnt/folha_de_aprovacao.tex
@@ -19,7 +19,7 @@
 \vspace*{\fill}
 \end{center}
 
-\assinatura{\textbf{\imprimirorientador} \\ Orientador} 
+\assinatura{\textbf{Prof. Victor Sonnenberg} \\ Orientador} 
 \assinatura{\textbf{Prof. Dr. Aldo Artur Belardi} \\ Examinador (1)}
 \assinatura{\textbf{Prof. Dr. Renato Camargo Giacomini} \\ Examinador (2)}
 \assinatura{\textbf{Prof. Dr. Salvador Pinillo Gimenez} \\ Examinador (3)}
