--- a/doc/abnt/resumo.tex
+++ b/doc/abnt/resumo.tex
@@ -3,10 +3,10 @@
 \begin{document}
 \begin{resumo}
 \hspace*{3em}
-A maior parte da energia gerada hoje provém de fontes não sustentáveis como combustíveis fosseis e fissão nuclear. Estas fontes são responsáveis de aumentar os efeitos da poluição, causar mudanças climáticas irreversíveis e, eventualmente, irão se esgotar completamente. Portanto, pesquisas na área de geração de energia renovável é parte integral no avanço do consumo de energia moderno para um nível mais sustentável, sendo que empresas e indústrias têm começado a considerar o potencial de geração desse tipo de energias, o que depende de vários fenômenos meteorológicos complexos. A tarefa de análise do potencial de geração não é uma questão trivial e requer um sistema especializado para obter resultados precisos e várias tecnologias modernas como IoT (Internet of Things) e Inteligência Artificial podem ser utilizadas para aumentar ainda mais a qualidade do produto. Este projeto visa desenvolver um sistema completo para esta aplicação incluindo aquisição de dados, armazenamento, processamento de informação e interface de usuário. Os métodos utilizados para a criação deste solução de ponta a ponta foram escolhidos pensando-se na utilização de tecnologias emergentes e na aplicabilidade dos conhecimentos adquiridos ao longo do curso.
+A tecnologia na atualidade permite que pessoas se conectem umas às outras e entre dispositivos inteligentes, tal como celulares, computadores e controladores. Com o aumento dessa demanda, as pessoas começaram a utilizar mais e mais desses dispositivos não só em casa, mas também em mercados, shoppings e hospitais. É evidente como eles estão conectados entre si via internet e conseguem numa fração de segundo trocaram informações. Portanto, pesquisas nesta área de dispositivos conectados é de grande valia para facilitar o dia a dia das pessoas e negócios. O conceito de poder controlar esses dispositivos pode ir além de acionar um relê ou ligar um led, mas poder aplicar análise de dados com tecnologias modernas como Big Data e Inteligência Artificial. Este modelo pode ser chamado de IoT (Internet das Coisas) e se trata exatamente do nosso projeto, visando desenvolver um sistema que inclua facilidade para o usuário final ao utilizar dispositivos inteligentes conectados entre si, com uma interface amigável para controle sem a dependência de serviços de cobrança terceiros. Os métodos utilizados para criação desta solução foram escolhidos com base na praticidade, eficiência e aplicabilidade das ferramentas e principalmente os conhecimentos adquiridos ao longo do curso.
 \vspace{\onelineskip}
 
 \noindent
-\textbf{Palavras-chave}: Energia renovável. Análise de viabilidade. Dados meteorológicos.
+\textbf{Palavras-chave}: Internet das Coisas. Dispositivos conectados. Open Source.
 \end{resumo}
 \end{document}
