--- a/layout.tex
+++ b/layout.tex
@@ -7,7 +7,7 @@
 
 \author{
 	Henrique Casares\\
-	Vini Lopes\\
+	Vinicius Lopes Silva\\
 	Lucas Campos Martins Ferreira Braga
 }
 \orientador{Prof. Dr. Marco Antônio Assis de Melo}
