--- a/doc/abnt/dedicatoria.tex
+++ b/doc/abnt/dedicatoria.tex
@@ -7,7 +7,7 @@
 \noindent
 \begin{flushright} 
 \begin{minipage}{0.5\textwidth}
-\textit{Gostaríamos de agradecer primeiramente a todos os funcionários do Centro Universitário da FEI, em especial aos professores Pier Marco Ricchetti, pela amizade, inspiração e dedicação à ensinar; Leandro Alves da Silva, pela enorme ajuda e aconselhamento e ao  Marco Antônio Assis de Melo, pela orientação e direcionamento. Agradecemos também à nossos familiares e amigos, que acreditaram nos nossos sonhos e nos apoiaram nos momentos mais difíceis de nossa formação.}
+\textit{Gostaríamos de agradecer primeiramente a todos os funcionários do Centro Universitário da FEI, em especial aos professores Pier Marco Ricchetti, pela amizade, inspiração e dedicação à ensinar; Leandro Alves da Silva, pela enorme ajuda e aconselhamento e ao  Victor Sonnenberg, pela orientação e direcionamento. Agradecemos também à nossos familiares e amigos, que acreditaram nos nossos sonhos e nos apoiaram nos momentos mais difíceis de nossa formação.}
 \end{minipage}
 \end{flushright}
 
