Updates: References, Abstract, Fundamentação, Introdução, layout, Capa [\addbibresource{References.bib}]

--- a/doc/abnt/abstract.tex
+++ b/doc/abnt/abstract.tex
@@ -3,10 +3,10 @@
 \begin{document}
 \begin{resumo}[Abstract]
 \hspace*{3em}
-Most of the energy generated today comes from unsustainable sources such as fossil fuels and nuclear fission. These sources are responsible for increasing the effects of pollution, causing irreversible climate changes and eventually will be completely consumed. Therefore, research in the area of renewable energy generation is an integral part of advancing modern energy consumption to a more sustainable level, and companies and industries have begun to consider the potential of generating this type of energy, which depends on several phenomena. complex weather conditions. The task of analyzing potential generation is not a trivial matter and requires a specialized system for accurate results and several modern technologies such as IoT (Internet of Things) and Artificial Intelligence can be used to further enhance product quality. This project aims to develop a complete system for this application including data acquisition, storage, information processing and user interface. The methods used to create this edge-to-edge solution were chosen considering the use of emerging technologies and the applicability of the knowledge acquired throughout the course.
+Today's technology allows people to connect to each other and between smart devices, such as cell phones, computers and controllers. With the increase in this demand, people began to use more and more of these devices not only at home, but also in markets, malls and hospitals. It is evident how they are connected to each other via the internet and are able to exchange information in a fraction of a second. Therefore, research in this area of connected devices have a great value to ease daily lives of people and businesses. The concept of being able to control these devices can go beyond activating a relay or turning on a led, but being able to apply data analysis with modern technologies such as Big Data and Artificial Intelligence. This model can be called IoT (Internet of Things) and it is exactly what we focus on our project, aiming to develop a system that includes connectivity for the end user when using smart devices connected to each other, with a friendly interface for control without the dependence on third-party services. The methods used to create this solution were chosen based on the practicality, efficiency and applicability of the tools and mainly the knowledge acquired during our course.
 \vspace{\onelineskip}
 
 \noindent
-\textbf{Keywords}: Renewable energy. Feasibility analysis. Weather data.
+\textbf{Keywords}: Internet of Things. Connected devices. Open Source.
 \end{resumo}
 \end{document}
