inserindo o texto do backend e a foto do diagrama do SW

--- a/References.bib
+++ b/References.bib
@@ -384,3 +384,37 @@
 	publisher = {ITEE Journal},
 	address = {Riphah International University, Faisalabad, Pakistan}		
 }
+
+@article{ElixirorIoT,
+  author={G. {Fedrecheski} and L. C. P. {Costa} and M. K. {Zuffo}},
+  booktitle={2016 IEEE International Symposium on Consumer Electronics (ISCE)}, 
+  title={Elixir programming language evaluation for IoT}, 
+  year={2016},
+  volume={},
+  number={},
+  pages={105-106},
+  doi={10.1109/ISCE.2016.7797392}
+}
+
+@INPROCEEDINGS{IoTeveryone,
+
+  author={D. {Pathirana} and S. {Sonnadara} and M. {Hettiarachchi} and H. {Siriwardana} and C. {Silva}},
+  booktitle={2017 Moratuwa Engineering Research Conference (MERCon)}, 
+  title={WireMe - IoT development platform for everyone}, 
+  year={2017},
+  volume={},
+  number={},
+  pages={93-98},
+  doi={10.1109/MERCon.2017.7980463}
+}
+
+@INPROCEEDINGS{3layers,
+
+  author={Q. L. {Chen} and Y. H. {Feng}},
+  booktitle={2015 10th International Conference on Information, Communications and Signal Processing (ICICS)}, 
+  title={The design and application of the online bookstore system .Net based on three tier architecture}, 
+  year={2015},
+  volume={},
+  number={},
+  pages={1-3},
+  doi={10.1109/ICICS.2015.7459824}}
