Atualização e complementação do texto de backend

--- a/References.bib
+++ b/References.bib
@@ -418,3 +418,45 @@
   number={},
   pages={1-3},
   doi={10.1109/ICICS.2015.7459824}}
+
+@INPROCEEDINGS{16,
+  author={B. M. {Adam} and A. {Rachmat Anom Besari} and M. M. {Bachtiar}},
+  booktitle={2019 International Electronics Symposium (IES)}, 
+  title={Backend Server System Design Based on REST API for Cashless Payment System on Retail Community}, 
+  year={2019},
+  volume={},
+  number={},
+  pages={208-213},
+  doi={10.1109/ELECSYM.2019.8901668}}
+
+@INPROCEEDINGS{19,
+  author={B. {Costa} and P. F. {Pires} and F. C. {Delicato} and P. {Merson}},
+  booktitle={2014 IEEE/IFIP Conference on Software Architecture}, 
+  title={Evaluating a Representational State Transfer (REST) Architecture: What is the Impact of REST in My Architecture?}, 
+  year={2014},
+  volume={},
+  number={},
+  pages={105-114},
+  doi={10.1109/WICSA.2014.29}}
+
+  @online {nerves,
+    author = {Justin Schneck},
+    organization = {Hex},
+    title  = {Nerves documentation},
+    day    = {7},
+    month  = {10},
+    year   = {2020},
+    url    = {https://hexdocs.pm/nerves/getting-started.html},
+    urldate = {2020-10-30}
+}
+
+  @online {phoenix,
+    author = { Chris McCord,},
+    organization = {Hex},
+    title  = {Phoenix documentation},
+    day    = {12},
+    month  = {10},
+    year   = {2020},
+    url    = {https://hexdocs.pm/phoenix/overview.html},
+    urldate = {2020-10-30}
+}
