Updates: Epigrafe, Resumo, Fundamentação, References, Abstract, Introdução, Imgs, and merge

--- a/References.bib
+++ b/References.bib
@@ -1,5 +1,79 @@
 %Our Refer
 
+@online {ind4,
+    author = {Bernard Marr},
+    organization = {Forbes},
+    title  = {What is Industry 4.0? Here's A Super Easy Explanation For Anyone},
+    day    = {02},
+    month  = {09},
+    year   = {2018},
+    url    = {https://www.forbes.com/sites/bernardmarr/2018/09/02/what-is-industry-4-0-heres-a-super-easy-explanation-for-anyone/#70315c99788a},
+    urldate = {2020-09-29}
+}
+
+
+@online {cyberphysic,
+    author = {Sahra Sedigh, Ali Hurson},
+    organization = {ScienceDirect},
+    title  = {Cyber-Physical Systems},
+    year   = {2018},
+    url    = {https://www.sciencedirect.com/science/article/pii/B9780123965288000018},
+    urldate = {2020-09-29}
+}
+
+@online {iot,
+    author = {Margaret Rouse},
+    organization = {IoT Agenda},
+    title  = {internet of things (IoT)},
+    day    = {22},
+    month  = {03},
+    year   = {2016},
+    url    = {https://internetofthingsagenda.techtarget.com/definition/Internet-of-Things-IoT},
+    urldate = {2020-09-29}
+}
+
+@online {iot_system,
+    author = {Margaret Rouse},
+    organization = {IoT Agenda},
+    title  = {internet of things (IoT)},
+    day    = {22},
+    month  = {03},
+    year   = {2016},
+    url    = {https://cdn.ttgtmedia.com/rms/onlineimages/iota-iot_system_desktop.png},
+    urldate = {2020-09-29}
+}
+
+@online {iot_evolution,
+    author = {Jim Chase},
+    organization = {Texas Instruments},
+    title  = {Evolution of Internet of Things},
+    month  = {09},
+    year   = {2013},
+    url    = {https://www.sciencedirect.com/science/article/abs/pii/S0168169918316417},
+    urldate = {2020-09-29}
+}
+
+@online {iothouse,
+    author = {Jim Chase},
+    organization = {Texas Instruments},
+    title  = {Evolution of Internet of Things},
+    month  = {09},
+    year   = {2013},
+    url    = {https://www.sciencedirect.com/science/article/abs/pii/S0168169918316417},
+    urldate = {2020-09-29}
+}
+
+@online {ind4,
+    author = {Simio LLC},
+    organization = {Cision PR Newswire},
+    title  = {Simio's 8 Reasons to Adopt Industry 4.0},
+    day    = {12},
+    month  = {04},
+    year   = {2018},
+    url    = {https://mma.prnewswire.com/media/676382/Simio_LLC.jpg?p=publish&w=650},
+    urldate = {2020-09-29}
+}
+
 @online {conectdevicesnum,
     author = {Relevante News},
     organization = {Relevante News},
@@ -22,367 +96,72 @@
     urldate = {2020-09-29}
 }
 
-%----------------------------------------------------%
-
-%Pi Refer
-@online {lstm,
-    author = {Christopher Olah},
-    organization = {Colah's Blog},
-    title  = {Understanding LSTM Networks},
-    day    = {27},
-    month  = {08},
-    year   = {2015},
-    url    = {https://colah.github.io/posts/2015-08-Understanding-LSTMs},
-    urldate = {2019-05-09}
-}
-
-@online {uart1,
-    author = {David K. Allison},
-    organization = {Curator, Division of Information Technology and Society, National Museum of American History, Smithsonian Institution},
-    title  = {Smithsonian Institution Oral and Video Histories},
-    day    = { },
-    month  = { },
-    year   = {1995},
-    url    = {https://americanhistory.si.edu/comphist/bell.htm#Inventing%20the%20UART},
-    urldate = {2019-11-02}
-}
-
-@online {SPI,
-    author = {CORELIS},
-    organization = {CORELIS},
-    title  = {SPI Tutorials},
-    day    = { },
-    month  = { },
-    year   = {2018},
-    url    = {https://www.corelis.com/education/tutorials/spi-tutorial/},
-    urldate = {2019-11-02}
-}
-
-@online {foto,
-    author = {Raoni Pinheiro},
-    organization = {Research Gate},
-    title  = {MATERIAIS APLICADOS À GERAÇÃO DE ENERGIA SOLAR EM EDIFICAÇÕES},
-    day    = { },
-    month  = {11},
-    year   = {2017},
-    url    = {https://bit.ly/340YQJY},
-    urldate = {2019-10-27}
-}
-
-@online {turbina,
-    author = {Julia Layton},
-    organization = {HowStuffWorks},
-    title  = {How Wind Power Works},
-    day    = {},
-    month  = {},
-    year   = {2006},
-    url    = {https://science.howstuffworks.com/environmental/green-science/wind-power2.htm},
-    urldate = {2019-10-28}
-}
-	
-
-@online {bme280,
-    author = {Rui Santos},
-    organization = {Random Nerd Tutorials},
-    title  = {ESP8266 with BME280 using Arduino IDE (Pressure, Temperature, Humidity)},
-    day    = {},
-    month  = {},
-    year   = {2013},
-    url    = {https://randomnerdtutorials.com/esp8266-bme280-arduino-ide/},
-    urldate = {2019-10-14}
-}
-
-@online {estacao,
-    author = {Banggood},
-    organization = {Banggood},
-    title  = {Estação meteorológica sem fio WH-2081},
-    day    = {},
-    month  = {},
-    year   = {2019},
-    url    = {https://bit.ly/2MIyHIS},
-    urldate = {2019-10-14}
-}
-
-@online {rtc,
-    author = {Adilson Thomsen},
-    organization = {Filipe Flop},
-    title  = {Real Time Clock RTC DS1307},
-    day    = {11},
-    month  = {06},
-    year   = {2014},
-    url    = {https://www.filipeflop.com/blog/relogio-rtc-ds1307-arduino/},
-    urldate = {2019-10-14}
-}
-
-@online {rj11,
-    author = {{Raspberry Pi Foundation}},
-    organization = {Raspberry Pi Foundation},
-    title  = {Build your own weather station},
-    day    = { },
-    month  = { },
-    year   = {2016},
-    url    = {https://bit.ly/2MNmGDp},
-    urldate = {2019-10-14}
-}
-
-@online {gps,
-    author = {Izabelle Lima},
-    organization = {Filipe Flop},
-    title  = {Aprenda a utilizar o modulo GPS com Arduino},
-    day    = {25},
-    month  = {01},
-    year   = {2018},
-    url    = {https://autocorerobotica.blog.br/aprenda-utilizar-o-modulo-gps-com-arduino/},
-    urldate = {2019-10-14}
-}
-
-@online {hisroty,
-    author = {Keith D. Foote},
-    organization = {Dataversity},
-    title  = {A Brief History of Deep Learning},
-    day    = {07},
-    month  = {02},
-    year   = {2017},
-    url    = {https://www.dataversity.net/brief-history-deep-learning},
-    urldate = {2019-08-30}
-}
-
-@online {IoT,
-    author = {Sam Smith},
-    organization = {Juniper Research},
-    title  = {IOT SECURITY SPEND TO REACH \$6 BILLION BY 2023, GROWING 300\% FROM 2018},
-    day    = {11},
-    month  = {07},
-    year   = {2018},
-    url    = {https://bit.ly/31MTyQN},
-    urldate = {2019-10-02}
-}
-
-@online {json,
-    author = {ALEXANDRE GAMA},
-    organization = {Devmedia},
-    title  = {O que é JSON},
-    day    = {},
-    month  = {},
-    year   = {2011},
-    url    = {https://www.devmedia.com.br/o-que-e-json/23166},
-    urldate = {2019-10-22}
-}
-
-@online {thread,
-    author = {Canaltech},
-    organization = {Canaltech},
-    title  = {O que é Thread?},
-    day    = {},
-    month  = {},
-    year   = {2017},
-    url    = {https://canaltech.com.br/produtos/o-que-e-thread/},
-    urldate = {2019-10-27}
-}
-
-@online {MQTT,
-    author = {Massimiliano Cannata and Milan Antonovic},
-    organization = {istSOS},
-    title  = {MQTT Broadcasting},
-    day    = {},
-    month  = {},
-    year   = {2017},
-    url    = {http://istsos.org/en/trunk/doc/ws_mqtt.html},
-    urldate = {2019-10-25}
-}
-
-@online {int_i2c,
-    author = {TIAGO HENRIQUE},
-    organization = {MICROCONTROLANDOS},
-    title  = {Comunicação I2C},
-    day    = {05},
-    month  = {12},
-    year   = {2012},
-    url    = {https://bit.ly/2Wijqmn},
-    urldate = {2019-10-27}
-}
-
-@online {VM,
-    author = {Função Informática},
-    organization = {Função Informática},
-    title  = {Virtualização x Container},
-    day    = {11},
-    month  = {01},
-    year   = {2019},
-    url    = {https://www.funcao.com.br/2019/01/11/virtualizacao-x-container/},
-    urldate = {2019-10-03}
-}
-
-@online {IBM,
-    author = {Michael Yuan},
-    organization = {IBM},
-    title  = {Conhecendo o MQTT},
+@online {i2c,
+    organization = {Wikipedia},
+    author = {Wikipedia},
+    title  = {I2C},
     day    = {04},
     month  = {10},
-    year   = {2017},
-    url    = {https://www.ibm.com/developerworks/br/library/iot-mqtt-why-good-for-iot/index.html},
-    urldate = {2019-09-29}
-}
-
-@online {raspberry,
-    author = {Rob Zwetsloot},
-    organization = {MagPi Magazine},
-    title  = {Raspberry Pi 3B+: meet the new member of the family},
-    day    = {},
-    month  = {},
-    year   = {2018},
-    url    = {https://magpi.raspberrypi.org/articles/raspberry-pi-3b-plus},
-    urldate = {2019-10-25}
-}
-
-@online {rosadosventos,
-    author = {Clima e Ambiente},
-    organization = {Clima e Ambiente},
-    title  = {Rosa dos Ventos},
-    day    = {26},
-    month  = {09},
-    year   = {2013},
-    url    = {https://climaeambiente.wordpress.com/2013/09/26/rosa-dos-ventos/},
-    urldate = {2019-10-04}
-}
-
-@article{artigo,
-	author = {Mohamed Akram Zaytar and Chaker El Amrani},
-	title = {Sequence to Sequence Weather Forecasting with Long Short-Term Memory Recurrent Neural Networks},
-	journal = {International Journal of Computer Applications},
-	issue_date = {June 2016},
-	volume = {143},
-	number = {11},
-	month = {Jun},
-	year = {2016},
-	pages = {7-11},
-	numpages = {5},
-	url = {http://www.ijcaonline.org/archives/volume143/number11/25119-2016910497},
-	publisher = {Foundation of Computer Science (FCS)},
-	address = {New York, NY, EUA}
-}
-
-@booklet{prev,
-	author = {{Ministério de Minas e Energias}},
-	institution = {{Ministério de Minas e Energias}},
-	title = {Projeção da demanda de energia elétrica para os próximos 10 anos (2017-2026)},
-	month = {Jan},
-	year = {2017},
-	publisher = {Foundation of Computer Science (FCS)},
-	address = {Rio de Janeiro, RJ}
-
-}
-
-@article{Lopatka2019,
-  doi = {10.1063/pt.3.4201},
-  url = {https://doi.org/10.1063/pt.3.4201},
-  year = {2019},
-  month = may,
-  publisher = {{AIP} Publishing},
-  volume = {72},
-  number = {5},
-  pages = {32--34},
-  author = {Alex Lopatka},
-  title = {Meteorologists predict better weather forecasting with {AI}},
-  journal = {Physics Today},
-  urldate = {2019-08-25}
-}
-
-%@online {graph1,
-%	author = {IEA},
-%    organization = {International Energy Agency},
-%    title  = {Electricity generation from renewables by source},
-%    url    = {https://www.iea.org/statistics/?country=BRAZIL&year=2016&category=Renewables&indicator=RenewGenBySource&mode=chart&dataTable=RENEWABLES},
-%   urldate = {2019-05-09}
-%}
-
-@online {graph2,
-	author = {{International Energy Agency}},
-    title  = {Electricity generation from renewables by source},
-    day    = {},
-    month  = {},
     year   = {2019},
-    url    = {https://www.iea.org/statistics/?country=BRAZIL&year=2016&category=Energy%20supply&indicator=TPESbySource&mode=chart&dataTable=BALANCES},
-    urldate = {2019-05-09}
+    url    = {https://pt.wikipedia.org/wiki/I%C2%B2C},
+    urldate = {2020-09-29}
 }
 
-@article{lstmarticle,
-  author    = {Alex Sherstinsky},
-  title     = {Fundamentals of Recurrent Neural Network {(RNN)} and Long Short-Term
-               Memory {(LSTM)} Network},
-  journal   = {CoRR},
-  volume    = {abs/1808.03314},
-  year      = {2018},
-  url       = {http://arxiv.org/abs/1808.03314},
-  archivePrefix = {arXiv},
-  eprint    = {1808.03314},
-  timestamp = {Sun, 02 Sep 2018 15:01:55 +0200},
-  biburl    = {https://dblp.org/rec/bib/journals/corr/abs-1808-03314},
-  bibsource = {dblp computer science bibliography, https://dblp.org},
-  urldate = {2019-08-31}
+@online {i2c_structure,
+    organization = {Circuit Basics},
+    title  = {BASICS OF THE I2C COMMUNICATION PROTOCOL},
+    day    = {13},
+    month  = {02},
+    year   = {2016},
+    url    = {https://www.circuitbasics.com/basics-of-the-i2c-communication-protocol/#:~:text=I2C%20is%20a%20serial%20communication,always%20controlled%20by%20the%20master.},
+    urldate = {2020-09-29}
 }
 
-@article{buchanan2005very,
-  title={A (very) brief history of artificial intelligence},
-  author={Buchanan, Bruce G},
-  journal={Ai Magazine},
-  volume={26},
-  number={4},
-  pages={53--53},
-  year={2005}
+@online {uart,
+    organization = {Codrey},
+    title  = {UART Communication Protocol – How it works?},
+    day    = {16},
+    month  = {06},
+    year   = {2020},
+    url    = {https://www.codrey.com/embedded-systems/uart-serial-communication-rs232/},
+    urldate = {2020-09-29}
 }
 
-@article{machinery1950computing,
-  title={Computing machinery and intelligence},
-  author={Alan Mathison Turing},
-  journal={Mind},
-  volume={59},
-  number={236},
-  pages={433},
-  year={1950}
+@online {sensores_iot,
+    organization = {Embarcados},
+    title  = {Sensores e Atuadores IoT},
+    day    = {24},
+    month  = {01},
+    year   = {2020},
+    url    = {https://www.embarcados.com.br/sensores-e-atuadores-iot/},
+    urldate = {2020-09-29}
 }
 
-@article{Hochreiter:1997,
- author = {Hochreiter, Sepp and Schmidhuber, J\"{u}rgen},
- title = {Long Short-Term Memory},
- journal = {Neural Comput.},
- issue_date = {November 15, 1997},
- volume = {9},
- number = {8},
- month = nov,
- year = {1997},
- issn = {0899-7667},
- pages = {1735--1780},
- numpages = {46},
- acmid = {1246450},
- publisher = {MIT Press},
- address = {Cambridge, MA, USA},
-} 
-
-@book{Nilsson:2009:QAI:1667096,
- author = {Nilsson, Nils J.},
- title = {The Quest for Artificial Intelligence},
- year = {2009},
- edition = {1st ed.},
- publisher = {Cambridge University Press},
- address = {New York, NY, EUA},
+@online {BH1750,
+    organization = {iMasters},
+    title  = {Como funciona o sensor de luz BH1750},
+    day    = {31},
+    month  = {01},
+    year   = {2017},
+    url    = {https://imasters.com.br/desenvolvimento/como-funciona-o-sensor-de-luz-bh1750},
+    urldate = {2020-09-29}
 }
 
+@online {BH1750_shop,
+    organization = {reichelt},
+    title  = {DEBO BH 1750 Developer Boards - Digital Light Sensor, BH1750},
+    url    = {https://cdn-reichelt.de/bilder/web/artikel_ws/A300/GY-302_1.jpg},
+    urldate = {2020-09-29}
+}
 
-@article {intro,
-	author = {Shahzad, Umair},
-	title = {The Need For Renewable Energy Sources},
-	journal = {International Journal of Information Technology and Electrical Engineering},
-	issue_date = {2017},
-	volume = {},
-	number = {},
-	month = {08},
-	year = {2015},
-	pages = {16-18},
-	numpages = {},
-	url = {https://www.researchgate.net/publication/316691176_The_Need_For_Renewable_Energy_Sources},
-	publisher = {ITEE Journal},
-	address = {Riphah International University, Faisalabad, Pakistan}		
+@online {dht11_pintout,
+    organization = {MaxPhi},
+    title  = {DHT11 Humidity & Temperature Sensor Arduino Tutorial},
+    day    = {31},
+    month  = {08},
+    year   = {2017},
+    url    = {https://www.maxphi.com/temperature-humidity-sensor-dht11-arduino-tutorial},
+    urldate = {2020-09-29}
 }
 
 @article{ElixirorIoT,
