Added: Resumo and Epigrafe which were missing

--- a/doc/abnt/epigrafe.tex
+++ b/doc/abnt/epigrafe.tex
@@ -5,9 +5,9 @@
 \vspace*{\fill}
 
 \begin{flushright}
-\textit{``O Importante não é voltar com a vitória\\
-	mas sim lutar por aquilo que se tem amor``\\
-	(Raul Seixas)
+\textit{``Quando tudo parecer dar errado em sua vida,\\
+	lembre-se que o avião decola contra o vento, e não a favor dele.``\\
+	(Henry Ford)
 }
 \end{flushright}
 
