--- a/doc/abnt/resumo.tex
+++ b/doc/abnt/resumo.tex
@@ -3,10 +3,10 @@
 \begin{document}
 \begin{resumo}
 \hspace*{3em}
-A tecnologia na atualidade permite que pessoas se conectem umas às outras e entre dispositivos inteligentes, tal como celulares, computadores e controladores. Com o aumento dessa demanda, as pessoas começaram a utilizar mais e mais desses dispositivos não só em casa, mas também em mercados, shoppings e hospitais. É evidente como eles estão conectados entre si via internet e conseguem numa fração de segundo trocaram informações. Portanto, pesquisas nesta área de dispositivos conectados é de grande valia para facilitar o dia a dia das pessoas e negócios. O conceito de poder controlar esses dispositivos pode ir além de acionar um relê ou ligar um led, mas poder aplicar análise de dados com tecnologias modernas como Big Data e Inteligência Artificial. Este modelo pode ser chamado de IoT (Internet das Coisas) e se trata exatamente do nosso projeto, visando desenvolver um sistema que inclua facilidade para o usuário final ao utilizar dispositivos inteligentes conectados entre si, com uma interface amigável para controle sem a dependência de serviços de cobrança terceiros. Os métodos utilizados para criação desta solução foram escolhidos com base na praticidade, eficiência e aplicabilidade das ferramentas e principalmente os conhecimentos adquiridos ao longo do curso.
+A tecnologia na atualidade permite que pessoas se conectem umas às outras e entre dispositivos inteligentes, tal como celulares, computadores e controladores. Com o aumento dessa demanda, as pessoas começaram a utilizar mais e mais desses dispositivos não só em casa, mas também em mercados, shoppings e hospitais. É evidente como eles estão conectados entre si via internet e conseguem numa fração de segundo trocaram informações. Portanto, pesquisas nesta área de dispositivos conectados é de grande valia para facilitar o dia a dia das pessoas e negócios. O conceito de poder controlar esses dispositivos pode ir além de acionar um relê ou ligar um led, mas poder aplicar análise de dados com tecnologias modernas como Big Data e Inteligência Artificial. Este modelo pode ser chamado de IoT (Internet das Coisas) e se trata exatamente do nosso projeto, visando desenvolver um sistema que inclua facilidade para o usuário final ao utilizar dispositivos inteligentes conectados entre si, com uma interface amigável para controle sem a dependência de serviços de cobrança terceiros, sem que o usuário tenha conhecimento profundo em programação ou eletrônica. Os métodos utilizados para criação desta solução foram escolhidos com base na praticidade, eficiência e aplicabilidade das ferramentas e principalmente os conhecimentos adquiridos ao longo do curso.
 \vspace{\onelineskip}
 
 \noindent
-\textbf{Palavras-chave}: Internet das Coisas. Dispositivos conectados. Open Source.
+\textbf{Palavras-chave}: Internet das Coisas. Dispositivos conectados. Código Aberto.
 \end{resumo}
 \end{document}
