documentação do front end

--- a/References.bib
+++ b/References.bib
@@ -230,7 +230,7 @@
 }
 
   @online {phoenix,
-    author = { Chris McCord,},
+    author = { Chris McCord},
     organization = {Hex},
     title  = {Phoenix documentation},
     day    = {12},
@@ -238,4 +238,37 @@
     year   = {2020},
     url    = {https://hexdocs.pm/phoenix/overview.html},
     urldate = {2020-10-30}
+}
+
+@INPROCEEDINGS{seguranca,
+  author={Z. {Zhang} and M. C. Y. {Cho} and C. {Wang} and C. {Hsu} and C. {Chen} and S. {Shieh}},
+  booktitle={2014 IEEE 7th International Conference on Service-Oriented Computing and Applications}, 
+  title={IoT Security: Ongoing Challenges and Research Opportunities}, 
+  year={2014},
+  volume={},
+  number={},
+  pages={230-234},
+  doi={10.1109/SOCA.2014.58}
+  }
+
+@online {frontend,
+    author = { },
+    organization = {MDN Web Docs},
+    title  = {What is JavaScript?},
+    day    = {21},
+    month  = {08},
+    year   = {2020},
+    url    = {https://developer.mozilla.org/en-US/docs/Learn/JavaScript/First_steps/What_is_JavaScript},
+    urldate = {2020-11-02}
+}
+
+@online {mobilefrontend,
+    author = {Alvaro Saburido},
+    organization = {Alvaro Saburidos},
+    title  = {Front End 101 for IoT Apps},
+    day    = {11},
+    month  = {04},
+    year   = {2018},
+    url    = {https://medium.com/@alvaro.saburido/front-end-101-for-iot-apps-24a725334af2},
+    urldate = {2020-11-02}
 }
