Updates: layout, introducao, fundamentação, hardware, software, metodo, references  (img folder)

--- a/layout.tex
+++ b/layout.tex
@@ -35,7 +35,7 @@
 \subfile{doc/chapter/software.tex}
 \subfile{doc/chapter/metodo.tex}
 \subfile{doc/chapter/consideracoes.tex}
-\subfile{doc/chapter/example_chapter.tex}
+%\subfile{doc/chapter/example_chapter.tex}
 
 \nocite{*}
 \printbibliography[title=Referências] 
