--- a/References.bib
+++ b/References.bib
@@ -230,7 +230,7 @@
 }
 
   @online {phoenix,
-    author = { Chris McCord,},
+    author = {Chris McCord},
     organization = {Hex},
     title  = {Phoenix documentation},
     day    = {12},
@@ -238,4 +238,69 @@
     year   = {2020},
     url    = {https://hexdocs.pm/phoenix/overview.html},
     urldate = {2020-10-30}
+}
+
+@online {usecases,
+    author = {Manuel Rubio},
+    organization = {Erlang Solutions},
+    title  = {Which companies are using Elixir, and why?},
+    day    = {19},
+    month  = {09},
+    year   = {2019},
+    url    = {https://www.erlang-solutions.com/blog/which-companies-are-using-elixir-and-why-mytopdogstatus.html},
+    urldate = {2020-09-29}
+}
+
+@online {elixirunorasp,
+    author = {Carlo Gilmar},
+    organization = {Medium},
+    title  = {Learning IoT: First Steps with Elixir},
+    day    = {12},
+    month  = {09},
+    year   = {2018},
+    url    = {https://medium.com/@carlogilmar/learning-iot-first-steps-with-elixir-310c4ad4ab15},
+    urldate = {2020-09-29}
+}
+
+@online {agile,
+    organization = {Geek Hunter},
+    title  = {Metodologia Agile, Scrum e Kanban},
+    day    = {16},
+    month  = {04},
+    year   = {2018},
+    url    = {https://blog.geekhunter.com.br/tudo-que-voce-precisa-saber-sobre-agile-scrum-e-kanban/#Metodologia_Agile_foco_no_cliente_e_otimizacao_de_recursos},
+    urldate = {2020-09-29}
+}
+
+@INPROCEEDINGS{seguranca,
+  author={Z. {Zhang} and M. C. Y. {Cho} and C. {Wang} and C. {Hsu} and C. {Chen} and S. {Shieh}},
+  booktitle={2014 IEEE 7th International Conference on Service-Oriented Computing and Applications}, 
+  title={IoT Security: Ongoing Challenges and Research Opportunities}, 
+  year={2014},
+  volume={},
+  number={},
+  pages={230-234},
+  doi={10.1109/SOCA.2014.58}
+  }
+
+@online {frontend,
+    author = { },
+    organization = {MDN Web Docs},
+    title  = {What is JavaScript?},
+    day    = {21},
+    month  = {08},
+    year   = {2020},
+    url    = {https://developer.mozilla.org/en-US/docs/Learn/JavaScript/First_steps/What_is_JavaScript},
+    urldate = {2020-11-02}
+}
+
+@online {mobilefrontend,
+    author = {Alvaro Saburido},
+    organization = {Alvaro Saburidos},
+    title  = {Front End 101 for IoT Apps},
+    day    = {11},
+    month  = {04},
+    year   = {2018},
+    url    = {https://medium.com/@alvaro.saburido/front-end-101-for-iot-apps-24a725334af2},
+    urldate = {2020-11-02}
 }
