Updates: layout, folha_de_aprovacao, dedicatória, resumo, abstract, introducao, fundamentacao, hardware, metodo; Removed: agradecimentos

--- a/layout.tex
+++ b/layout.tex
@@ -14,7 +14,7 @@
 }
 \orientador{Prof. Dr. Victor Sonnenberg}
 
-\title{nerves of steel platform}
+\title{Plataforma IoT(odos)}
 \data{2020}
 \local{São Bernardo do Campo -- SP}
 \instituicao{Centro Universitário FEI}
@@ -23,7 +23,7 @@
 \subfile{doc/abnt/capa.tex}
 \subfile{doc/abnt/folha_de_aprovacao.tex}
 \subfile{doc/abnt/dedicatoria.tex}
-\subfile{doc/abnt/agradecimentos.tex}
+%\subfile{doc/abnt/agradecimentos.tex}
 \subfile{doc/abnt/epigrafe.tex}
 \subfile{doc/abnt/resumo.tex}
 \subfile{doc/abnt/abstract.tex}
@@ -35,7 +35,6 @@
 \subfile{doc/chapter/software.tex}
 \subfile{doc/chapter/metodo.tex}
 \subfile{doc/chapter/consideracoes.tex}
-%\subfile{doc/chapter/example_chapter.tex}
 
 \nocite{*}
 \printbibliography[title=Referências] 
