--- a/doc/abnt/abstract.tex
+++ b/doc/abnt/abstract.tex
@@ -3,7 +3,7 @@
 \begin{document}
 \begin{resumo}[Abstract]
 \hspace*{3em}
-Today's technology allows people to connect to each other and between smart devices, such as cell phones, computers and controllers. With the increase in this demand, people began to use more and more of these devices not only at home, but also in markets, malls and hospitals. It is evident how they are connected to each other via the internet and are able to exchange information in a fraction of a second. Therefore, research in this area of connected devices have a great value to ease daily lives of people and businesses. The concept of being able to control these devices can go beyond activating a relay or turning on a led, but being able to apply data analysis with modern technologies such as Big Data and Artificial Intelligence. This model can be called IoT (Internet of Things) and it is exactly what we focus on our project, aiming to develop a system that includes connectivity for the end user when using smart devices connected to each other, with a friendly interface for control without the dependence on third-party services, even if the user doesn't have any knowledge in programming or electronics. The methods used to create this solution were chosen based on the practicality, efficiency and applicability of the tools and mainly the knowledge acquired during our course.
+Today's technology allows people to connect to each other and between smart devices, such as cell phones, computers and controllers. With the increase in this demand, people began to use more and more of these devices not only at home, but also in markets, malls and hospitals. It is evident how they are connected to each other via the internet and are able to exchange information in a fraction of a second. Therefore, research in this area of connected devices have a great value to ease daily lives of people and businesses. The concept of being able to control these devices can go beyond activating a relay or turning on a led, but being able to apply data analysis with modern technologies such as Big Data and Artificial Intelligence. This model is called IoT (Internet of Things) and it is exactly what we focus on our project, aiming to develop a system that includes connectivity for the end user when using smart devices connected to each other, with a friendly interface for control without the dependence on third-party services, even if the user doesn't have any knowledge in programming or electronics. The methods used to create this solution were chosen based on the practicality, efficiency and applicability of the tools and mainly the knowledge acquired during our course.
 \vspace{\onelineskip}
 
 \noindent
