ajustes finais e estou add o pdf para ver como as referencias estão

--- a/doc/abnt/resumo.tex
+++ b/doc/abnt/resumo.tex
@@ -3,7 +3,7 @@
 \begin{document}
 \begin{resumo}
 \hspace*{3em}
-A tecnologia na atualidade permite que pessoas se conectem umas às outras e entre dispositivos inteligentes, tal como celulares, computadores e controladores. Com o aumento dessa demanda, as pessoas começaram a utilizar mais e mais desses dispositivos não só em casa, mas também em mercados, shoppings e hospitais. É evidente como eles estão conectados entre si via internet e conseguem numa fração de segundo trocar informações. Portanto, pesquisas nesta área de dispositivos conectados são de grande valia para facilitar o dia a dia das pessoas e negócios. O uso destes dispositivos pode ir além de simplesmente acionar um relê ou ligar um led, podendo atingir até mesmo a análise de dados em massa (Big Data) e a Inteligência Artificial. Este modelo pode é chamado de IoT (Internet das Coisas) e se trata exatamente do nosso projeto, visando desenvolver um sistema que inclua facilidade para o usuário final ao utilizar dispositivos inteligentes conectados entre si, com uma interface de controle amigável sem a dependência de serviços de terceiros e sem que o usuário tenha conhecimento profundo em programação ou eletrônica. Os métodos utilizados para criação desta solução foram escolhidos com base na praticidade, eficiência e aplicabilidade das ferramentas e principalmente nos conhecimentos adquiridos ao longo do curso.
+A tecnologia na atualidade permite que pessoas se conectem umas às outras e entre dispositivos inteligentes, tal como celulares, computadores e controladores. Com o aumento dessa demanda, as pessoas começaram a utilizar mais e mais desses dispositivos não só em casa, mas também em mercados, shoppings e hospitais. É evidente como eles estão conectados entre si via internet e conseguem numa fração de segundo trocar informações. Portanto, pesquisas nesta área de dispositivos conectados são de grande valia para facilitar o dia a dia das pessoas e negócios. O uso destes dispositivos pode ir além de simplesmente acionar um relê ou ligar um led, podendo atingir até mesmo a análise de dados em massa (\emph{Big Data}) e a Inteligência Artificial. Este modelo  é chamado de IoT (Internet das Coisas) e se trata exatamente do nosso projeto, visando desenvolver um sistema que inclua facilidade para o usuário final ao utilizar dispositivos inteligentes conectados entre si, com uma interface de controle amigável sem a dependência de serviços de terceiros e sem que o usuário tenha conhecimento profundo em programação ou eletrônica. Os métodos utilizados para criação desta solução foram escolhidos com base na praticidade, eficiência e aplicabilidade das ferramentas e principalmente nos conhecimentos adquiridos ao longo do curso.
 \vspace{\onelineskip}
 
 \noindent
