alterou uma referencia da foto

--- a/References.bib
+++ b/References.bib
@@ -43,16 +43,6 @@
     urldate = {2020-09-29}
 }
 
-@online {iot_evolution,
-    author = {Jim Chase},
-    organization = {Texas Instruments},
-    title  = {Evolution of Internet of Things},
-    month  = {09},
-    year   = {2013},
-    url    = {https://www.sciencedirect.com/science/article/abs/pii/S0168169918316417},
-    urldate = {2020-09-29}
-}
-
 @online {iothouse,
     author = {Jim Chase},
     organization = {Texas Instruments},
@@ -63,7 +53,7 @@
     urldate = {2020-09-29}
 }
 
-@online {ind4,
+@online {ind41,
     author = {Simio LLC},
     organization = {Cision PR Newswire},
     title  = {Simio's 8 Reasons to Adopt Industry 4.0},
@@ -154,7 +144,7 @@
     urldate = {2020-09-29}
 }
 
-@online {dht11_pintout,
+@online {dht11_pinout,
     organization = {MaxPhi},
     title  = {DHT11 Humidity & Temperature Sensor Arduino Tutorial},
     day    = {31},
@@ -304,4 +294,16 @@
     year   = {2018},
     url    = {https://medium.com/@alvaro.saburido/front-end-101-for-iot-apps-24a725334af2},
     urldate = {2020-11-02}
+}
+
+@online {rpi,
+       author = {Alex Eames},
+       organization = {RasPi.TV},
+       title = {Raspberry Pi 3 model B launches today},
+       day = {29},
+       month = {02},
+       year = {2016},
+       url = {https://raspi.tv/2016/raspberry-pi-3-model-b-launches-today-64-bit-quad-a53-1-2-g
+hz-bcm2837},
+       urldate = {2020-05-08}
 }
