Troca do nome do orientador e título

--- a/doc/abnt/folha_de_aprovacao.tex
+++ b/doc/abnt/folha_de_aprovacao.tex
@@ -19,9 +19,9 @@
 \vspace*{\fill}
 \end{center}
 
-\assinatura{\textbf{Prof. Victor Sonnenberg} \\ Orientador} 
-\assinatura{\textbf{Prof. Dr. Renato Camargo Giacomini} \\ Examinador (1)}
-\assinatura{\textbf{Prof. Dr. Salvador Pinillo Gimenez} \\ Examinador (2)}
+\assinatura{\textbf{Prof. Dr. Victor Sonnenberg} \\ Orientador} 
+\assinatura{\textbf{Prof. Dr. Marco Antonio Assis de Melo} \\ Examinador (1)}
+\assinatura{\textbf{Prof. Dr. Plinio Thomaz Aquino Júnior} \\ Examinador (2)}
 %\assinatura{\textbf{Professor} \\ Convidado 4}
 
 \begin{center}
