--- a/layout.tex
+++ b/layout.tex
@@ -14,7 +14,7 @@
 }
 \orientador{Prof. Dr. Victor Sonnenberg}
 
-\title{Plataforma IoT(odos)}
+\title{IoT para todos}
 \data{2020}
 \local{São Bernardo do Campo -- SP}
 \instituicao{Centro Universitário FEI}
