reformat & escape special chars

--- a/doc/abnt/capa.tex
+++ b/doc/abnt/capa.tex
@@ -9,6 +9,6 @@
 
 \clearpage
 \addtocounter{page}{-1}
-% \includepdf[page={1}]{doc/ficha_catalografica} %only include this if we do have one
+\includepdf[page={1}]{doc/ficha_catalografica}
 \clearpage
 \end{document}
